--- a/main/src/addins/CSharpBinding/CSharpBinding.csproj
+++ b/main/src/addins/CSharpBinding/CSharpBinding.csproj
@@ -239,7 +239,9 @@
     <Compile Include="MonoDevelop.CSharp\CSharpAmbience.cs" />
     <Compile Include="MonoDevelop.CSharp\PathedDocumentTextEditorExtension.cs" />
     <Compile Include="MonoDevelop.CSharp.Completion\CSharpCompletionTextEditorExtension.cs" />
-    <Compile Include="MonoDevelop.CSharp.Completion\MemberCompletionData.cs" />
+    <Compile Include="MonoDevelop.CSharp.Completion\MemberCompletionData.cs">
+      <DependentUpon>IndexerParameterDataProvider.cs</DependentUpon>
+    </Compile>
     <Compile Include="MonoDevelop.CSharp.Completion\DelegateDataProvider.cs" />
     <Compile Include="MonoDevelop.CSharp.Refactoring\CSharpReferenceFinder.cs" />
     <Compile Include="MonoDevelop.CSharp.Completion\ConstructorParameterDataProvider.cs" />
