--- a/monodevelop/MonoDevelop.FSharpBinding/MonoDevelop.FSharp.windows.fsproj
+++ b/monodevelop/MonoDevelop.FSharpBinding/MonoDevelop.FSharp.windows.fsproj
@@ -84,11 +84,11 @@
     <None Include="templates.AssemblyInfo.xft.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="../extras/AspNetMvc4/templates.FSharpProjectMvc4Razor.xpt.xml">
+    <None Include="templates.FSharpProjectMvc4Razor.xpt.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
 
-    <None Include="../extras/AspNetMvc4/templates.FSharpProjectMvc4Razor.windows.xpt.xml">
+    <None Include="templates.FSharpProjectMvc4Razor.windows.xpt.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
 
@@ -154,31 +154,31 @@
     </Reference>
     <Reference Include="Mono.TextEditor">
       <Private>False</Private>
-      <HintPath>c:\Program Files (x86)\MonoDevelop/bin/Mono.TextEditor.dll</HintPath> 
+      <HintPath>C:\Program Files (x86)\Xamarin Studio/bin/Mono.TextEditor.dll</HintPath> 
     </Reference>
     <Reference Include="MonoDevelop.Core">
       <Private>False</Private>
-      <HintPath>c:\Program Files (x86)\MonoDevelop/bin/MonoDevelop.Core.dll</HintPath>
+      <HintPath>C:\Program Files (x86)\Xamarin Studio/bin/MonoDevelop.Core.dll</HintPath>
     </Reference>
     <Reference Include="monodoc">
       <Private>False</Private>
-      <HintPath>c:\Program Files (x86)\MonoDevelop/bin/monodoc.dll</HintPath>
+      <HintPath>C:\Program Files (x86)\Xamarin Studio/bin/monodoc.dll</HintPath>
     </Reference>
     <Reference Include="MonoDevelop.Ide">
       <Private>False</Private>
-      <HintPath>c:\Program Files (x86)\MonoDevelop/bin/MonoDevelop.Ide.dll</HintPath>
+      <HintPath>C:\Program Files (x86)\Xamarin Studio/bin/MonoDevelop.Ide.dll</HintPath>
     </Reference>
     <Reference Include="ICSharpCode.NRefactory">
       <Private>False</Private>
-      <HintPath>c:\Program Files (x86)\MonoDevelop/bin/ICSharpCode.NRefactory.dll</HintPath>
+      <HintPath>C:\Program Files (x86)\Xamarin Studio/bin/ICSharpCode.NRefactory.dll</HintPath>
     </Reference>
     <Reference Include="MonoDevelop.SourceEditor2">
       <Private>False</Private>
-      <HintPath>c:\Program Files (x86)\MonoDevelop/AddIns/DisplayBindings/SourceEditor\MonoDevelop.SourceEditor2.dll</HintPath>
+      <HintPath>C:\Program Files (x86)\Xamarin Studio/AddIns/DisplayBindings/SourceEditor\MonoDevelop.SourceEditor2.dll</HintPath>
     </Reference>
     <Reference Include="MonoDevelop.Refactoring">
       <Private>False</Private>
-      <HintPath>c:\Program Files (x86)\MonoDevelop/AddIns/MonoDevelop.Refactoring/MonoDevelop.Refactoring.dll</HintPath>
+      <HintPath>C:\Program Files (x86)\Xamarin Studio/AddIns/MonoDevelop.Refactoring/MonoDevelop.Refactoring.dll</HintPath>
     </Reference>
     <ProjectReference Include="..\..\FSharp.CompilerBinding\FSharp.CompilerBinding.fsproj">
       <Project>{88F6940F-D300-474C-B2A7-E2ECD5B04B57}</Project>
