updated readme, add make install task

--- a/emacs/Makefile
+++ b/emacs/Makefile
@@ -1,10 +1,12 @@
 # Directories
+
 base_d = $(abspath ..)/
 test_d = $(abspath test)/
 tmp_d  = $(abspath tmp)/
 bin_d  = $(abspath bin)/
 
 # Elisp files required for tests.
+src_files         = $(wildcard ./*.el)
 integration_tests = $(test_d)integration-tests.el
 unit_tests        = $(filter-out $(integration_tests), $(wildcard $(test_d)*tests.el))
 utils             = $(test_d)test-common.el $(test_d)pos-tip-mock.el
@@ -17,18 +19,18 @@ load_integration_tests = $(patsubst %,-l %, $(integration_tests))
 emacs_opts       = --batch -f run-fsharp-tests
 
 # HACK: Vars for manually building the ac binary.
-# We should be really able to use the makefile for this...
+# We should be really able to use the top-level makefile for this...
 ac_exe    = $(bin_d)fsautocomplete.exe
 ac_fsproj = $(base_d)FSharp.AutoComplete/FSharp.AutoComplete.fsproj
 ac_out    = $(base_d)FSharp.AutoComplete/bin/Debug/
 
-# Environment
-HOME     := $(tmp_d)
-export HOME
+# Installation paths.
+dest_root = $(HOME)/.emacs.d/fsharp-mode/
+dest_bin  = $(HOME)/.emacs.d/fsharp-mode/bin/
 
 # ----------------------------------------------------------------------------
 
-.PHONY : env test unit-test integration-test packages clean-elc
+.PHONY : env test unit-test integration-test packages clean-elc install
 
 clean : clean-elc
 	rm -fr $(bin_d)
@@ -40,23 +42,35 @@ clean-elc :
 
 # Building
 
-all : $(ac_exe) packages
+install : $(ac_exe) $(dest_root) $(dest_bin)
 
-packages :
-	$(emacs) $(load_files) --batch -f load-packages
+	for f in $(src_files); do \
+		cp $$f $(dest_root) ;\
+	done
 
-$(ac_exe): bin
+	cp -R $(bin_d) $(dest_bin)
+
+
+$(ac_exe) : $(bin_d)
 	xbuild $(ac_fsproj) /property:OutputPath=$(bin_d)
 
-bin :; mkdir -p $(bin_d)
+$(dest_root) :; mkdir -p $(dest_root)
+$(dest_bin)  :; mkdir -p $(dest_bin)
+$(bin_d)     :; mkdir -p $(bin_d)
 
 # Testing
 
-test unit-test :
+test unit-test : packages
+	HOME=$(tmp_d) ;\
 	$(emacs) $(load_files) $(load_unit_tests) $(emacs_opts)
 
-integration-test : $(ac_exe)
-	cd $(test_d) ; $(emacs) $(load_files) $(load_integration_tests) $(emacs_opts)
+integration-test : $(ac_exe) packages
+	cd $(test_d) ;\
+	HOME=$(tmp_d) ;\
+	$(emacs) $(load_files) $(load_integration_tests) $(emacs_opts)
 
 test-all : unit-test integration-test
 
+packages :
+	HOME=$(tmp_d) ;\
+	$(emacs) $(load_files) --batch -f load-packages
