test task does not depend on packages task

--- a/emacs/Makefile
+++ b/emacs/Makefile
@@ -64,7 +64,7 @@ clean-elc :
 
 # Testing
 
-test unit-test : packages
+test unit-test :
 	HOME=$(tmp_d) ;\
 	$(emacs) $(load_files) $(load_unit_tests) $(emacs_opts)
 
