--- a/main/Makefile.include
+++ b/main/Makefile.include
@@ -15,6 +15,7 @@ MD_LAUNCH_SETUP= \
 	LD_LIBRARY_PATH="$(LD_LIBRARY_PATH)" \
 	DYLD_FALLBACK_LIBRARY_PATH="$(DYLD_FALLBACK_LIBRARY_PATH)" \
 	MONO_GAC_PREFIX="$(MONO_GAC_PREFIX)" \
+	MONO_GC_PARAMS=major=marksweep-conc \
 	MONODEVELOP_LOCALE_PATH="$(abs_top_builddir)/build/locale" \
 	MONO_ADDINS_REGISTRY="$(MD_BIN_PATH)"
 
