Use the new concurrent sgen mark-sweep when running with make run
It's a stupid hack, but at the moment there's no easy way to
concatenate that env var as mono does not allow trailing separators
when it parses the option string.

Older versions of mono also bail out when they encounter options
they don't understand, so this is the simplest way of probing for
'marksweep-conc' support and falling back to regular sgen if it's
not found.

--- a/main/Makefile.am
+++ b/main/Makefile.am
@@ -120,7 +120,8 @@ runmd: $(PROGRAM)
 	$(MD_LAUNCH) --debug $(MD_BIN_PATH)/MonoDevelop.exe --no-redirect
 
 runmd-sgen: $(PROGRAM)
-	$(MD_LAUNCH)-sgen --debug $(MD_BIN_PATH)/MonoDevelop.exe --no-redirect
+	(MONO_GC_PARAMS=major=marksweep-conc $(MD_LAUNCH)-sgen --debug $(MD_BIN_PATH)/MonoDevelop.exe --no-redirect) \
+					  || $(MD_LAUNCH)-sgen --debug $(MD_BIN_PATH)/MonoDevelop.exe --no-redirect
 
 run-debug: $(PROGRAM)
 	MONODEVELOP_CONSOLE_LOG_LEVEL=All $(MD_LAUNCH) --debug=casts $(MD_BIN_PATH)/MonoDevelop.exe --no-redirect
