--- a/main/src/core/MonoDevelop.Core/MonoDevelop.Core.csproj
+++ b/main/src/core/MonoDevelop.Core/MonoDevelop.Core.csproj
@@ -437,6 +437,7 @@
     <Compile Include="MonoDevelop.Core\IWebCertificateProvider.cs" />
     <Compile Include="MonoDevelop.Core.Execution\ExecutionTarget.cs" />
     <Compile Include="MonoDevelop.Core.Assemblies\SupportedFramework.cs" />
+    <Compile Include="MonoDevelop.Projects.Extensions\UnknownProjectTypeNode.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Makefile.am" />
