Large refactor/rename of emacs code
Use fsharp-ac as a shorter prefix for fsharp-mode-completion.
Fix up tests in line with this.
In general, prefix/function is public, prefix-function is private.

--- a/emacs/Makefile
+++ b/emacs/Makefile
@@ -86,3 +86,7 @@ byte-compile : packages
 	$(emacs) -batch --eval "(package-initialize)"\
           --eval "(add-to-list 'load-path \"$(base_d)/emacs\")" \
           -f batch-byte-compile $(src_files)
+
+run : packages
+	HOME=$(tmp_d) ;\
+	$(emacs) $(load_files)
