[Core] Fix up the framework definitions
* Fix some bad/missing framework name/version info
* Make list of MS.NET assemblies match MS reference frameworks
* Add 3.5/4.0 client profiles

--- a/main/src/core/MonoDevelop.Core/MonoDevelop.Core.csproj
+++ b/main/src/core/MonoDevelop.Core/MonoDevelop.Core.csproj
@@ -469,6 +469,12 @@
     <EmbeddedResource Include="frameworks\framework_NET_4_5.xml">
       <LogicalName>framework_NET_4_5.xml</LogicalName>
     </EmbeddedResource>
+    <EmbeddedResource Include="frameworks\framework_NET_3_5_client.xml">
+      <LogicalName>framework_NET_3_5_client.xml</LogicalName>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frameworks\framework_NET_4_0_client.xml">
+      <LogicalName>framework_NET_4_0_client.xml</LogicalName>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Target Name="BeforeBuild">
