[CSharpBinding] Ast resolver is now shared between semantic highlighting, source analysis and refactoring. This speeds up the editor on very large file dramatically.

--- a/main/src/addins/MonoDevelop.Refactoring/MonoDevelop.Refactoring.csproj
+++ b/main/src/addins/MonoDevelop.Refactoring/MonoDevelop.Refactoring.csproj
@@ -108,6 +108,7 @@
     <Compile Include="MonoDevelop.CodeIssues\DefaultCodeIssueCategories.cs" />
     <Compile Include="MonoDevelop.CodeIssues\CodeIssueAddinNode.cs" />
     <Compile Include="MonoDevelop.Refactoring\ResolveCommandHandler.cs" />
+    <Compile Include="MonoDevelop.Refactoring\ExtensionMethods.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="MonoDevelop.Refactoring\" />
