--- a/monodevelop/MonoDevelop.FSharpBinding/Gui/MonoDevelop.FSharp.Gui.csproj
+++ b/monodevelop/MonoDevelop.FSharpBinding/Gui/MonoDevelop.FSharp.Gui.csproj
@@ -35,21 +35,21 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
     <Reference Include="pango-sharp">
-      <HintPath>../../dependencies/gtk-sharp-2.0/pango-sharp.dll</HintPath>
+      <HintPath>..\..\dependencies\gtk-sharp-2.0\pango-sharp.dll</HintPath>
     </Reference>
     <Reference Include="atk-sharp">
-      <HintPath>../../dependencies/gtk-sharp-2.0/atk-sharp.dll</HintPath>
-    </Reference>
-    <Reference Include="gdk-sharp">
-      <HintPath>../../dependencies/gtk-sharp-2.0/gdk-sharp.dll</HintPath>
-    </Reference>
-    <Reference Include="gtk-sharp">
-      <HintPath>../../dependencies/gtk-sharp-2.0/gtk-sharp.dll</HintPath>
+      <HintPath>..\..\dependencies\gtk-sharp-2.0\atk-sharp.dll</HintPath>
     </Reference>
     <Reference Include="glib-sharp">
-      <HintPath>../../dependencies/gtk-sharp-2.0/glib-sharp.dll</HintPath>
+      <HintPath>..\..\dependencies\gtk-sharp-2.0\glib-sharp.dll</HintPath>
     </Reference>
     <Reference Include="Mono.Posix, Version=2.0.0.0, Culture=neutral, PublicKeyToken=0738eb9f132ed756" />
+    <Reference Include="gdk-sharp">
+      <HintPath>..\..\dependencies\gtk-sharp-2.0\gdk-sharp.dll</HintPath>
+    </Reference>
+    <Reference Include="gtk-sharp">
+      <HintPath>..\..\dependencies\gtk-sharp-2.0\gtk-sharp.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="gtk-gui\gui.stetic">
@@ -65,6 +65,7 @@
     <Compile Include="gtk-gui\MonoDevelop.FSharp.Gui.FSharpCompilerOptionsWidget.cs" />
     <Compile Include="gtk-gui\MonoDevelop.FSharp.Gui.FSharpBuildOrderWidget.cs" />
     <Compile Include="gtk-gui\MonoDevelop.FSharp.Gui.FSharpSettingsWidget.cs" />
+    <Compile Include="gtk-gui\MonoDevelop.FSharp.Gui.dummy.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
