Fix up a bunch of bad configuration mappings
May fix BXC11396 - mdtool crashes when building .sln file

--- a/main/src/tools/mdtool/mdtool.csproj
+++ b/main/src/tools/mdtool/mdtool.csproj
@@ -26,6 +26,7 @@
     <DebugType>none</DebugType>
     <Optimize>False</Optimize>
     <WarningLevel>4</WarningLevel>
+    <PlatformTarget>x86</PlatformTarget>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\core\MonoDevelop.Core\MonoDevelop.Core.csproj">
