[Ide] Don't copy Data files to wrong place
The MSBuild tasks already do the work of copying to the correct location
for the Data build action - having Copy to Output set too results in
duplicate files in the wrong location.

--- a/main/src/core/MonoDevelop.Ide/MonoDevelop.Ide.csproj
+++ b/main/src/core/MonoDevelop.Ide/MonoDevelop.Ide.csproj
@@ -1857,21 +1857,11 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Makefile.am" />
-    <Data Include="options\DefaultEditingLayout.xml">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Data>
-    <Data Include="options\MonoDevelopProperties.xml">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Data>
-    <Data Include="options\MonoDevelop-templates.xml">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Data>
-    <Data Include="options\MonoDevelop-tools.xml">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Data>
-    <Data Include="options\TipsOfTheDay.xml">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Data>
+    <Data Include="options\DefaultEditingLayout.xml" />
+    <Data Include="options\MonoDevelopProperties.xml" />
+    <Data Include="options\MonoDevelop-templates.xml" />
+    <Data Include="options\MonoDevelop-tools.xml" />
+    <Data Include="options\TipsOfTheDay.xml" />
     <None Include="MonoDevelop.Ide.dll.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
