[Core] Add internal test runner

--- a/main/src/core/MonoDevelop.Core/MonoDevelop.Core.csproj
+++ b/main/src/core/MonoDevelop.Core/MonoDevelop.Core.csproj
@@ -76,6 +76,12 @@
     </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Web" />
+    <Reference Include="nunit.core">
+      <HintPath>..\..\..\external\mdtestharness\lib\nunit.core.dll</HintPath>
+    </Reference>
+    <Reference Include="nunit.core.interfaces">
+      <HintPath>..\..\..\external\mdtestharness\lib\nunit.core.interfaces.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MonoDevelop.Core\StringParserService.cs" />
@@ -439,6 +445,7 @@
     <Compile Include="MonoDevelop.Core.Execution\ExecutionTarget.cs" />
     <Compile Include="MonoDevelop.Core.Assemblies\SupportedFramework.cs" />
     <Compile Include="MonoDevelop.Projects.Extensions\UnknownProjectTypeNode.cs" />
+    <Compile Include="MonoDevelop.Core\InternalTestRunner.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Makefile.am" />
