[Unit tests] Added custom runner add-in
MD unit tests are now run using a custom runner.
When running inside MD, the custom custom runner
in MD.Core is used. When outside MD, mdtool is
used to invoke the custom runner.

Add-in assemblies are not local-copied anymore
in the test dir. This is not necessary because the
custom test runner loads the add-ins before
loading the test assemblies.

If new add-ins are referenced in the tests, then
the add-in references must be added to the file
MonoDevelop.TestRunner.addin.xml.

--- a/main/tests/Makefile.am
+++ b/main/tests/Makefile.am
@@ -4,7 +4,7 @@ SUBDIRS=UnitTests MacPlatform.Tests UserInterfaceTests
 
 MONO=mono
 HARNESS=$(top_srcdir)/external/mdtestharness/nunit-console-x86.exe -domain=multiple
-RUN_TEST=$(MD_LAUNCH_SETUP) $(MONO) $(HARNESS)
+RUN_TEST=$(MDTOOL_RUN) run-md-tests
 TEST_DIR=$(top_builddir)/build/tests
 EXTERNAL=$(top_builddir)/external
 
@@ -47,6 +47,8 @@ test:
 			$(RUN_TEST) $$asm || exit $?; \
 		done; \
 	fi
+
+include $(top_srcdir)/Makefile.include
 
 EXTRA_DIST = \
 	test-projects/resources-tester/ResourcesTester/Subfolder/FormFile2.cs \
