[Debugger] Implement our own "TreeRowReference" since gtk#'s is buggy(?)
For some reason, row.Valid() is returning true, but somehow row.Path
is null. This seems to happen when rows are deleted above the path
that the row references, making TreeRowReference basically useless.

Not sure if it's a bug in our binding or gtk+ itself, or if I'm just
somehow using it wrong(?), but my custom implementation seems to work.

--- a/main/src/addins/MonoDevelop.Debugger/MonoDevelop.Debugger.csproj
+++ b/main/src/addins/MonoDevelop.Debugger/MonoDevelop.Debugger.csproj
@@ -140,6 +140,7 @@
     <Compile Include="MonoDevelop.Debugger\ExpressionEvaluatorExtensionNode.cs" />
     <Compile Include="gtk-gui\MonoDevelop.Debugger.ExceptionCaughtWidget.cs" />
     <Compile Include="MonoDevelop.Debugger\TreePathComparer.cs" />
+    <Compile Include="MonoDevelop.Debugger\TreePathReference.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="MonoDevelop.Debugger.addin.xml">
