--- a/main/src/core/MonoDevelop.TextEditor.Tests/MonoDevelop.TextEditor.Tests.csproj
+++ b/main/src/core/MonoDevelop.TextEditor.Tests/MonoDevelop.TextEditor.Tests.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Mono.TextEditor.Tests.DefaultEditActions\BookmarkActionsTests.cs" />
     <Compile Include="Mono.TextEditor.Tests.DefaultEditActions\FoldActionTests.cs" />
     <Compile Include="Mono.TextEditor.Tests.DefaultEditActions\MiscActionsTest.cs" />
+    <Compile Include="Mono.TextEditor.Tests\ClipboardTests.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
