--- a/main/tests/UnitTests/UnitTests.csproj
+++ b/main/tests/UnitTests/UnitTests.csproj
@@ -277,6 +277,9 @@
     <Compile Include="MonoDevelop.Core\BacktrackingStringMatcherTests.cs" />
     <Compile Include="MonoDevelop.Ide.Gui\SearchPopupWindowTests.cs" />
     <Compile Include="MonoDevelop.Core\LaneStringMatcherTests.cs" />
+    <Compile Include="MonoDevelop.Xml.StateEngine\HtmlParsingTests.cs" />
+    <Compile Include="MonoDevelop.Xml.StateEngine\AspNetParsingTests.cs" />
+    <Compile Include="MonoDevelop.Xml.StateEngine\ParsingTests.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="..\..\md.targets" />
@@ -302,9 +305,6 @@
     <None Include="MonoDevelop.Projects\DomCompilationUnitTests.cs" />
     <Compile Include="MonoDevelop.Xml.StateEngine\TestParser.cs" />
     <None Include="MonoDevelop.Projects\DomTests.cs" />
-    <None Include="MonoDevelop.Xml.StateEngine\ParsingTests.cs" />
-    <None Include="MonoDevelop.Xml.StateEngine\AspNetParsingTests.cs" />
-    <None Include="MonoDevelop.Xml.StateEngine\HtmlParsingTests.cs" />
     <None Include="MonoDevelop.AspNet\AspNetCompletionTests.cs" />
     <None Include="MonoDevelop.AspNet\AspNetTesting.cs" />
   </ItemGroup>
